fixed alignment in mobile version

--- a/src/layouts/PageLayout/PageLayout.css
+++ b/src/layouts/PageLayout/PageLayout.css
@@ -1,5 +1,5 @@
 @media (min-width: 1200px) {
-    .page-bg{
+    .page-bg {
         position: absolute;
         top: 0;
         left: 0;
@@ -10,12 +10,12 @@
 
 @media(max-width: 1200px) {
 
-    .page-bg{
+    .page-bg {
         position: relative;
         min-height: 100vh;
     }
 
-    .page-content{
+    .page-content {
         position: relative;
         display: flex;
         flex-direction: column;
@@ -23,6 +23,11 @@
         align-items: center;
         text-align: center;
         gap: 1rem;
+    }
+
+    .page-bg-color{
+        display: flex;
+        justify-content: center;
     }
 }
 
@@ -33,12 +38,12 @@
     background-size: cover;
 }
 
-.page-bg-color{
+.page-bg-color {
     background-color: var(--color-transparent-bg);
     min-height: 100vh;
     width: 100%;
 }
 
-.page-content{
+.page-content {
     /* landing animation */
 }
